--- a/recoil-todo-list-advanced/package.json
+++ b/recoil-todo-list-advanced/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^4.22.4",
     "@types/react": "^18.0.26",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.0.0",
